# dacquery

./: .gitignore  BUILD.md  Dockerfile  Makefile.am  README.md  RELEASE NOTES.md  check-gitversion  configure.ac  dacaroni.1  dacaroni.c  dacaroni.h  dacquery.1  dacquery.c  dactari.1  dactari.c  debug.c  debug.h
.github/workflows/: debian.yml  docker.yml
